# agentpack

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SPEC.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  repomix-output.xml  requirements.txt  scratch_financebench.py  sitemap.xml  test_models.py  walkthrough.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
api/parsers/: index.html
architecture/: index.html
benchmark/: index.html
benchmarks/: BASELINE.md  corpus_explorer_mockup.html  run.py  run_v2_eval.py
benchmarks/financebench_sample/: generation_report.md  generation_results.json  gold_evidence.yml  queries.yml  retrieval_report.md
benchmarks/phase1-benchmarks/: gold_evidence.yml  queries.yml  retrieval_report.md
benchmarks/research_ops_gold_v1/: gold_evidence.yml  queries.yml  retrieval_report.md
cli-reference/: index.html
corpus-explorer-ui/: index.html
demo_corpus/: AgentPack_Benchmark.md  organizations-100.csv
docs/: architecture.md  benchmark.md  cli-reference.md  corpus-explorer-ui.md  knowledge-map.md
docs/api/: core.md  parsers.md
docs/specs/: 0001-tasks.md
scripts/: check_sqlite.py  postinstall.js  sync_version.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml  test.txt
site/architecture/: index.html
site/benchmark/: index.html
tasks/: plan.md  todo.md
tests/: conftest.py  test_cache.py  test_chunker.py  test_cli.py  test_config.py  test_e2e.py  test_enrich.py  test_eval.py  test_map_cli.py  test_mapper.py  test_pack.py  test_parsers.py  test_retrieve.py  test_scanner.py  test_ui.py  test_validate.py
(+5888 files in other folders)
