[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-context-packager"
version = "0.2.0"
description = "A document-to-agent-context compiler."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.23.0",
    "pandas>=2.0.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0",
    "pyinstaller>=6.0.0",
    "tabulate>=0.9.0",
    "fastembed>=0.2.7",
    "numpy>=1.24.0",
    "datasets>=2.0.0",
    "requests>=2.0.0",
    "pathspec>=0.11.0",
    "detect-secrets>=1.4.0"
]

[project.scripts]
agentpack = "agentpack.cli:app"

[project.optional-dependencies]
ui = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "umap-learn>=0.5.5",
    "scikit-learn>=1.3.0"
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0"
]
